data/derived/comb/progs/unify/prog7856.ml.out
Characters 38-62:
  if n > 0 then digitsOfInt(n mod 10)@[]
                ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
